# void-crm-backend

./: .dockerignore  .env.dev.example  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.claude/plans/: structure.md
app/: main.py
app/core/connections/: __init__.py  base.py  cache.py  database.py  messaging.py
app/core/dependencies/: __init__.py  auth.py  base.py  cache.py  checklist.py  database.py  health.py  knowledge.py  messaging.py  pagination.py  system_settings.py  token.py  user_settings.py  users.py  websocket.py
app/core/exceptions/: __init__.py  auth.py  base.py  common.py  dependencies.py  handlers.py  health.py  rate_limits.py  register.py  users.py
app/core/integrations/: __init__.py
app/core/integrations/ai/: __init__.py  base.py  factory.py  openrouter.py
app/core/integrations/cache/: __init__.py  auth.py  base.py
app/core/lifespan/: __init__.py  admin_init.py  base.py  cache.py  database.py  fixtures.py  messaging.py
app/core/logging/: __init__.py  formatters.py
app/core/messaging/: __init__.py  publisher.py
app/core/middlewares/: __init__.py  docs_auth.py  logging.py  rate_limits.py  timing.py
app/core/migrations/: MIGRATION_GUIDE.md  env.py
app/core/security/: __init__.py  auth.py  cookie_manager.py  encryption.py  password_manager.py  token_manager.py
app/core/settings/: __init__.py  ai.py  base.py  logging.py  paths.py
app/core/utils/: __init__.py  chunking.py  password_validator.py  text.py
app/core/websocket/: __init__.py  manager.py
app/models/: __init__.py  base.py
app/models/v1/: __init__.py  checklist.py  knowledge.py  roles.py  system_settings.py  user_settings.py  users.py
app/repository/: __init__.py  base.py  health.py
app/repository/cache/: __init__.py  backend.py  memory.py  none.py  redis.py
app/repository/docs/: ADVANCED.md  BEST_PRACTICES.md  CRUD.md  INDEX.md  MIGRATION_GUIDE.md  MONITORING.md  PERFORMANCE_REPORT.md  README.md  REFACTORING_REPORT.md
app/repository/monitoring/: __init__.py  hooks.py  logging.py
app/repository/v1/: __init__.py  checklist.py  knowledge.py  system_settings.py  user_settings.py  users.py
app/routers/: __init__.py  base.py  health.py  main.py
app/routers/v1/: __init__.py  auth.py  user.py
app/routers/v1/knowledge/: mcp.py  (+6 more)
app/schemas/: __init__.py  base.py  pagination.py  websocket.py
app/schemas/health/: __init__.py  base.py  responses.py
app/services/: __init__.py  base.py  health.py
app/services/v1/: __init__.py  admin_init.py  auth.py  checklist.py  knowledge.py  system_settings.py  token.py  user_settings.py  users.py
data/fixtures/: checklist.json
docs/: openrouter_docs_api_reference.md
mcp-servers/void-crm/: README.md  package.json
mcp-servers/void-crm/src/: config.ts  index.ts  server.ts
scripts/: activate.ps1  activate.sh  commands.py  init-pgvector.sql  setup.bat  sync_checklist_from_frontend.py
worker/: __init__.py  broker.py  main.py
worker/handlers/: __init__.py  knowledge.py
(+67 files in other folders)
