[project]
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "redis>=6.4.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pytz>=2025.2",
  "itsdangerous>=2.2.0",
]
description = "Backend для внутренней CRM веб-студии VOID"
name = "void-crm-backend"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.3.0",
]

[project.scripts]
bootstrap = "scripts.commands:activate"
check = "scripts.commands:check"
dev = "scripts.commands:dev"
format = "scripts.commands:format_code"
migrate = "scripts.commands:migrate"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
]
